# PyThermoCalcDB

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: docs.md  examples.md  index.md
examples/: calc-hsg-mix.py  calc-hsg.py  calc-sat.py  custom-equation.py  exp-1.py  exp-2.py  exp-3.py  reference.py  thermo-hsg-exp-1.py  thermo-hsg-exp-2.py  thermo-hsg-exp-3.py
examples/density/: liquid-density-exp-1.py
examples/energy/: enthalpy-exp-1.py  entropy-exp-1.py  gibbs-exp-1.py
examples/enthalpy/: enthalpy-exp-1.py
examples/heat-capacity/: heat-capacity-exp-1.py
examples/hsg/: exp-1.py  exp-2.py  model_source.py
examples/hsg/thermodb/: hydrogen.pkl  methanol.pkl
examples/reaction/: exp-1.py  exp-2.py  exp-3.py
examples/thermodb/: carbon dioxide-g.pkl  carbon monoxide-g.pkl  ethanol.pkl  exp-1.py  methane-g.pkl  methanol-ethanol with ignore state props.pkl  mixture methanol-ethanol.pkl  oxygen-g.pkl  water-l.pkl
examples/vapor-pressure/: antoine-exp-1.py  wagner-exp-1.py
examples/viscosity/: gas-viscosity-1.py  liquid-viscosity-1.py
pyThermoCalcDB/: __init__.py  app.py
pyThermoCalcDB/configs/: __init__.py  constants.py  info.py  thermo_props.py
pyThermoCalcDB/core/: __init__.py  calc.py  component_vapor.py  component_vapr.py  hsg_mixture.py  hsg_properties.py  hsg_reaction.py  x_prop.py
pyThermoCalcDB/docs/: __init__.py  main.py  reactions.py  sat.py  thermo.py
pyThermoCalcDB/models/: __init__.py  component_ref.py  density.py  enthalpy.py  heat_capacity.py  ref.py  vapor_pressure.py
pyThermoCalcDB/reactions/: __init__.py  main.py  reactions.py  rxn.py  source.py
pyThermoCalcDB/thermo/: __init__.py  density.py  enthalpy.py  entropy.py  gibbs.py  heat_capacity.py  source.py  vapor_pressure.py  viscosity.py
pyThermoCalcDB/utils/: __init__.py  component_tools.py  conversions.py  math_tools.py  tools.py
releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
