[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyThermoCalcDB"
version = "0.6.0"
description = "Python Thermodynamic Calculation Engine powered by PyThermoDB."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Sina Gilassi", email = "sina.gilassi@gmail.com"}
]
keywords = [
    "chemical-engineering",
    "thermodynamics",
    "thermodynamic-equations",
    "thermodynamic-properties",
    "process-simulation",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "scipy>=1.16.3",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "pythermodb",
    "pythermolinkdb",
    "pythermodb-settings",
    "pycuc",
]

[project.urls]
Homepage = "https://github.com/sinagilassi/pyThermoCalcDB"
Source = "https://github.com/sinagilassi/pyThermoCalcDB"
Tracker = "https://github.com/sinagilassi/pyThermoCalcDB/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
    "examples",
    "examples.*",
    "notebooks",
    "notebooks.*",
    "statics",
    "statics.*",
    "private",
    "private.*",
    "app",
    "app.*"
]

[tool.setuptools.package-data]
pyThermoCalcDB = [
    "config/*.yml",
    "data/*.csv",
    "templates/*.html",
    "static/*",
    "static/**/*"
]
